--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "dat.gui": "^0.7.9",
+    "http-server": "^14.1.1",
     "live-server": "^1.2.2",
     "parcel": "^2.12.0"
   },
