--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dat.gui": "^0.7.9",
     "http-server": "^14.1.1",
     "live-server": "^1.2.2",
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "three": "^0.169.0"
